Major UI implementations, scrolling fading images for all sections, adjusted layouts for sections

--- a/LiveSite/css/iefonts_index.css
+++ b/LiveSite/css/iefonts_index.css
@@ -1,54 +1,54 @@
-#u158-4,#u749-4,#u750-4,#u156-4,#u168-4,#u171-4,#u220-4,#u221-4,#u184-4,#u243-4
+#u158-4,#u749-4,#u750-4,#u156-4,#u168-4,#u171-4,#u184-4,#u243-4
 {
 	font-family: asap-n4, sans-serif;
 }
 
-#u132-4,#u82-4,#u81-4,#u328-4,#u625-4
+#u132-4,#u82-4,#u81-4,#u625-4
 {
 	font-family: asap-n7, sans-serif;
 }
 
-#u338-4,#u229-4
+#u328-4,#u229-4
 {
 	font-family: asap-n7, sans-serif;
 }
 
-#u321-6,#u339-4,#u366-4,#u656-4,#u355-4,#u362-4
+#u321-6,#u339-4,#u221-4,#u220-4,#u355-4,#u362-4
 {
 	font-family: asap-n4, sans-serif;
 }
 
-#u244-4,#u512-4,#u649-4
+#u338-4,#u244-4,#u649-4
 {
 	font-family: asap-n7, sans-serif;
 }
 
-#u534-4,#u652-4
+#u652-4
 {
 	font-family: asap-n7, sans-serif;
 }
 
-#u518-6,#u532-4,#u431-4,#u663-4,#u663,#u426-4,#u664-4,#u664,#u427-4,#u666-4,#u428-4,#u667-4,#u618-4
+#u366-4,#u518-6,#u532-4,#u656-4,#u431-4,#u663-4,#u663,#u426-4,#u664-4,#u664,#u428-4,#u427-4,#u618-4
 {
 	font-family: asap-n4, sans-serif;
 }
 
-#u255-4,#u563-4,#u676-4
+#u512-4,#u534-4,#u255-4,#u676-4
 {
 	font-family: asap-n7, sans-serif;
 }
 
-#u597-4,#u681-4
+#u681-4
 {
 	font-family: asap-n7, sans-serif;
 }
 
-#u621-4,#u568-6,#u599-4,#u866-4,#u840-4,#u841-4
+#u666-4,#u667-4,#u599-4,#u568-6,#u621-4,#u866-4,#u840-4,#u841-4
 {
 	font-family: asap-n4, sans-serif;
 }
 
-#u955-4,#u863-4,#u837-4,#u857-4
+#u597-4,#u563-4,#u955-4,#u863-4,#u837-4,#u857-4
 {
 	font-family: asap-n7, sans-serif;
 }
