layout for scenario 2 new playlist modal fixed

--- a/LiveSite/css/index.css
+++ b/LiveSite/css/index.css
@@ -1,7 +1,7 @@
 .version.index /* version checker */
 {
-	color: #000014;
-	background-color: #55A997;
+	color: #0000E8;
+	background-color: #9C6C3F;
 }
 
 .html
@@ -30,14 +30,14 @@
 
 #u124
 {
-	z-index: 351;
+	z-index: 352;
 	height: 111px;
 	background-color: #000000;
 }
 
 #u124-bw
 {
-	z-index: 351;
+	z-index: 352;
 	position: fixed;
 	left: 0px;
 	right: 0px;
@@ -51,7 +51,7 @@
 
 #u149
 {
-	z-index: 356;
+	z-index: 357;
 	width: 48px;
 	background-color: transparent;
 	position: fixed;
@@ -61,7 +61,7 @@
 
 #u132-4
 {
-	z-index: 352;
+	z-index: 353;
 	width: 274px;
 	min-height: 25px;
 	background-color: transparent;
@@ -77,7 +77,7 @@
 
 #u743
 {
-	z-index: 377;
+	z-index: 378;
 	width: 31px;
 	background-color: transparent;
 	position: fixed;
@@ -87,7 +87,7 @@
 
 #u158-4
 {
-	z-index: 362;
+	z-index: 363;
 	width: 84px;
 	min-height: 31px;
 	background-color: transparent;
@@ -104,7 +104,7 @@
 
 #u751
 {
-	z-index: 379;
+	z-index: 380;
 	width: 31px;
 	background-color: transparent;
 	position: fixed;
@@ -114,7 +114,7 @@
 
 #u749-4
 {
-	z-index: 366;
+	z-index: 367;
 	width: 131px;
 	min-height: 31px;
 	background-color: transparent;
@@ -131,7 +131,7 @@
 
 #u868
 {
-	z-index: 381;
+	z-index: 382;
 	width: 31px;
 	background-color: transparent;
 	position: fixed;
@@ -141,7 +141,7 @@
 
 #u750-4
 {
-	z-index: 370;
+	z-index: 371;
 	width: 144px;
 	min-height: 31px;
 	background-color: transparent;
@@ -158,7 +158,7 @@
 
 #u156-4
 {
-	z-index: 358;
+	z-index: 359;
 	width: 112px;
 	min-height: 27px;
 	background-color: transparent;
@@ -175,7 +175,7 @@
 
 #u161
 {
-	z-index: 374;
+	z-index: 375;
 	width: 43px;
 	height: 2px;
 	background-color: #FFFFFF;
@@ -186,7 +186,7 @@
 
 #u162
 {
-	z-index: 375;
+	z-index: 376;
 	width: 43px;
 	height: 2px;
 	background-color: #FFFFFF;
@@ -197,7 +197,7 @@
 
 #u163
 {
-	z-index: 376;
+	z-index: 377;
 	width: 43px;
 	height: 2px;
 	background-color: #FFFFFF;
@@ -208,7 +208,7 @@
 
 #u114
 {
-	z-index: 384;
+	z-index: 385;
 	width: 50px;
 	min-height: 25px;
 	border-style: none;
@@ -221,7 +221,7 @@
 
 #u75
 {
-	z-index: 383;
+	z-index: 384;
 	width: 60px;
 	min-height: 64px;
 	border-style: none;
@@ -234,7 +234,7 @@
 
 #u82-4
 {
-	z-index: 292;
+	z-index: 293;
 	width: 248px;
 	min-height: 41px;
 	background-color: transparent;
@@ -250,7 +250,7 @@
 
 #u170
 {
-	z-index: 300;
+	z-index: 301;
 	width: 170px;
 	height: 1px;
 	background-color: #7F7F7F;
@@ -260,7 +260,7 @@
 
 #u168-4
 {
-	z-index: 296;
+	z-index: 297;
 	width: 351px;
 	min-height: 63px;
 	background-color: transparent;
@@ -283,7 +283,7 @@
 
 #u695
 {
-	z-index: 204;
+	z-index: 205;
 	width: 241px;
 	min-height: 245px;
 	border-style: none;
@@ -295,7 +295,7 @@
 
 #u697
 {
-	z-index: 205;
+	z-index: 206;
 	width: 317px;
 	min-height: 245px;
 	border-style: none;
@@ -308,7 +308,7 @@
 
 #u171-4
 {
-	z-index: 301;
+	z-index: 302;
 	width: 226px;
 	min-height: 40px;
 	background-color: transparent;
@@ -325,7 +325,7 @@
 
 #u172
 {
-	z-index: 305;
+	z-index: 306;
 	width: 39px;
 	background-color: transparent;
 	position: relative;
@@ -373,7 +373,7 @@
 
 #u1011
 {
-	z-index: 208;
+	z-index: 209;
 	width: 752px;
 	background-color: transparent;
 	opacity: 0.47;
@@ -386,7 +386,7 @@
 
 #u185
 {
-	z-index: 210;
+	z-index: 211;
 	width: 250px;
 	min-height: 336px;
 	border-style: none;
@@ -400,7 +400,7 @@
 
 #u81-4
 {
-	z-index: 211;
+	z-index: 212;
 	width: 440px;
 	min-height: 32px;
 	background-color: transparent;
@@ -416,7 +416,7 @@
 
 #u184-4
 {
-	z-index: 215;
+	z-index: 216;
 	width: 105px;
 	min-height: 22px;
 	background-color: transparent;
@@ -430,7 +430,7 @@
 
 #u190
 {
-	z-index: 219;
+	z-index: 220;
 	width: 302px;
 	min-height: 29px;
 	border-style: none;
@@ -444,7 +444,7 @@
 
 #buttonu199
 {
-	z-index: 220;
+	z-index: 221;
 	width: 70px;
 	border-width: 1px;
 	border-style: solid;
@@ -475,7 +475,7 @@
 
 #u243-4
 {
-	z-index: 223;
+	z-index: 224;
 	width: 39px;
 	min-height: 15px;
 	background-color: transparent;
@@ -501,7 +501,7 @@
 
 #u203
 {
-	z-index: 221;
+	z-index: 222;
 	width: 14px;
 	background-color: transparent;
 	position: relative;
@@ -526,7 +526,7 @@
 
 #buttonu212
 {
-	z-index: 227;
+	z-index: 228;
 	width: 205px;
 	border-color: #787878;
 	background-color: #CACACA;
@@ -546,7 +546,7 @@
 
 #u206
 {
-	z-index: 228;
+	z-index: 229;
 	width: 19px;
 	background-color: transparent;
 	position: relative;
@@ -564,7 +564,7 @@
 
 #u625-4
 {
-	z-index: 230;
+	z-index: 231;
 	width: 164px;
 	min-height: 44px;
 	background-color: transparent;
@@ -590,7 +590,7 @@
 
 #pamphletu291
 {
-	z-index: 234;
+	z-index: 235;
 	width: 0.01px;
 	height: 53px;
 	position: relative;
@@ -601,7 +601,7 @@
 
 #u292
 {
-	z-index: 235;
+	z-index: 236;
 	width: 205px;
 	position: relative;
 	margin-right: -10000px;
@@ -649,12 +649,12 @@
 
 #u298popup
 {
-	z-index: 237;
+	z-index: 238;
 }
 
 #u303
 {
-	z-index: 238;
+	z-index: 239;
 	width: 288px;
 	height: 313px;
 	border-style: none;
@@ -671,7 +671,7 @@
 
 #u328-4
 {
-	z-index: 250;
+	z-index: 251;
 	width: 187px;
 	min-height: 23px;
 	background-color: transparent;
@@ -686,7 +686,7 @@
 
 #u325
 {
-	z-index: 248;
+	z-index: 249;
 	width: 20px;
 	background-color: transparent;
 	position: relative;
@@ -697,7 +697,7 @@
 
 #u321-6
 {
-	z-index: 239;
+	z-index: 240;
 	width: 288px;
 	min-height: 46px;
 	background-color: transparent;
@@ -719,7 +719,7 @@
 
 #u322
 {
-	z-index: 245;
+	z-index: 246;
 	width: 200px;
 	min-height: 181px;
 	border-style: none;
@@ -732,7 +732,7 @@
 
 #u319
 {
-	z-index: 246;
+	z-index: 247;
 	width: 95px;
 	min-height: 29px;
 	border-style: none;
@@ -745,7 +745,7 @@
 
 #u626
 {
-	z-index: 247;
+	z-index: 248;
 	width: 95px;
 	min-height: 29px;
 	border-style: none;
@@ -759,7 +759,7 @@
 
 #buttonu228
 {
-	z-index: 254;
+	z-index: 255;
 	width: 205px;
 	border-color: #787878;
 	background-color: #CACACA;
@@ -786,7 +786,7 @@
 
 #u230
 {
-	z-index: 259;
+	z-index: 260;
 	width: 19px;
 	background-color: transparent;
 	position: relative;
@@ -811,7 +811,7 @@
 
 #u229-4
 {
-	z-index: 255;
+	z-index: 256;
 	width: 164px;
 	min-height: 44px;
 	background-color: transparent;
@@ -837,7 +837,7 @@
 
 #pamphletu329
 {
-	z-index: 261;
+	z-index: 262;
 	width: 0.01px;
 	height: 53px;
 	position: relative;
@@ -848,7 +848,7 @@
 
 #u334
 {
-	z-index: 262;
+	z-index: 263;
 	width: 205px;
 	position: relative;
 	margin-right: -10000px;
@@ -896,12 +896,12 @@
 
 #u336popup
 {
-	z-index: 264;
+	z-index: 265;
 }
 
 #u337
 {
-	z-index: 265;
+	z-index: 266;
 	width: 316px;
 	height: 323px;
 	border-style: none;
@@ -915,7 +915,7 @@
 
 #u693
 {
-	z-index: 266;
+	z-index: 267;
 	width: 297px;
 	min-height: 296px;
 	border-style: none;
@@ -929,7 +929,7 @@
 
 #u350
 {
-	z-index: 267;
+	z-index: 268;
 	width: 155px;
 	min-height: 141px;
 	border-style: none;
@@ -943,7 +943,7 @@
 
 #u343
 {
-	z-index: 268;
+	z-index: 269;
 	width: 95px;
 	min-height: 30px;
 	border-style: none;
@@ -957,7 +957,7 @@
 
 #u691
 {
-	z-index: 269;
+	z-index: 270;
 	width: 95px;
 	min-height: 30px;
 	border-style: none;
@@ -971,7 +971,7 @@
 
 #u339-4
 {
-	z-index: 270;
+	z-index: 271;
 	width: 288px;
 	min-height: 56px;
 	background-color: transparent;
@@ -986,7 +986,7 @@
 
 #u345
 {
-	z-index: 274;
+	z-index: 275;
 	width: 20px;
 	background-color: transparent;
 	position: relative;
@@ -997,7 +997,7 @@
 
 #u338-4
 {
-	z-index: 276;
+	z-index: 277;
 	width: 195px;
 	min-height: 23px;
 	background-color: transparent;
@@ -1014,7 +1014,7 @@
 
 #u352
 {
-	z-index: 280;
+	z-index: 281;
 	vertical-align: top;
 	width: 156px;
 	height: 2px;
@@ -1033,7 +1033,7 @@
 
 #u241
 {
-	z-index: 281;
+	z-index: 282;
 	vertical-align: top;
 	width: 302px;
 	height: 2px;
@@ -1052,7 +1052,7 @@
 
 #u353
 {
-	z-index: 282;
+	z-index: 283;
 	width: 504px;
 	min-height: 81px;
 	border-style: none;
@@ -1065,7 +1065,7 @@
 
 #u221-4
 {
-	z-index: 283;
+	z-index: 284;
 	width: 142px;
 	min-height: 26px;
 	background-color: transparent;
@@ -1082,7 +1082,7 @@
 
 #u216
 {
-	z-index: 287;
+	z-index: 288;
 	width: 302px;
 	min-height: 19px;
 	border-style: none;
@@ -1096,7 +1096,7 @@
 
 #u220-4
 {
-	z-index: 288;
+	z-index: 289;
 	width: 301px;
 	min-height: 20px;
 	background-color: transparent;
@@ -1771,29 +1771,89 @@
 #u530
 {
 	z-index: 185;
-	width: 240px;
-	height: 261px;
+	width: 311px;
+	height: 321px;
 	border-style: none;
 	border-color: transparent;
 	background-color: #FFFFFF;
-	padding-left: 19px;
-	padding-top: 60px;
-	padding-right: 52px;
 	margin-right: -10000px;
 	position: relative;
 	top: 22px;
 	left: 22px;
 }
 
-#pu534-4
+#u1025
 {
-	width: 0.01px;
-	margin-left: 37px;
+	z-index: 186;
+	width: 311px;
+	min-height: 315px;
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 6px;
+}
+
+#u539
+{
+	z-index: 187;
+	width: 155px;
+	min-height: 139px;
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 182px;
+	left: 76px;
+}
+
+#u535
+{
+	z-index: 188;
+	width: 95px;
+	min-height: 30px;
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 236px;
+	left: 46px;
+}
+
+#u532-4
+{
+	z-index: 189;
+	width: 240px;
+	min-height: 56px;
+	background-color: transparent;
+	text-align: center;
+	font-size: 16px;
+	line-height: 19px;
+	font-family: asap, sans-serif;
+	font-weight: 400;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 104px;
+	left: 19px;
+}
+
+#u537
+{
+	z-index: 193;
+	width: 20px;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 62px;
+	left: 228px;
 }
 
 #u534-4
 {
-	z-index: 194;
+	z-index: 195;
 	width: 166px;
 	min-height: 23px;
 	background-color: transparent;
@@ -1804,77 +1864,20 @@
 	font-weight: 700;
 	position: relative;
 	margin-right: -10000px;
-}
-
-#u537
-{
-	z-index: 192;
-	width: 20px;
-	background-color: transparent;
-	position: relative;
-	margin-right: -10000px;
-	margin-top: 2px;
-	left: 172px;
-}
-
-#u532-4
-{
-	z-index: 188;
-	width: 240px;
-	min-height: 56px;
-	background-color: transparent;
-	text-align: center;
-	font-size: 16px;
-	line-height: 19px;
-	font-family: asap, sans-serif;
-	font-weight: 400;
-	margin-top: 21px;
-	position: relative;
-}
-
-#pu539
-{
-	width: 0.01px;
-	margin-left: 27px;
-	margin-top: 21px;
-}
-
-#u539
-{
-	z-index: 186;
-	width: 155px;
-	min-height: 139px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	position: relative;
-	margin-right: -10000px;
-	left: 31px;
-}
-
-#u535
-{
-	z-index: 187;
-	width: 95px;
-	min-height: 30px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	position: relative;
-	margin-right: -10000px;
-	margin-top: 54px;
+	margin-top: 60px;
+	left: 56px;
 }
 
 #u531
 {
-	z-index: 198;
+	z-index: 199;
 	vertical-align: top;
 	width: 156px;
 	height: 2px;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 16px;
-	left: 29px;
+	margin-top: 198px;
+	left: 74px;
 	background: url("../images/u531.png") no-repeat 0px 0px;
 }
 
@@ -1886,7 +1889,7 @@
 
 #u661
 {
-	z-index: 199;
+	z-index: 200;
 	width: 95px;
 	min-height: 30px;
 	border-style: none;
@@ -1894,13 +1897,13 @@
 	background-color: transparent;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 55px;
-	left: 118px;
+	margin-top: 237px;
+	left: 164px;
 }
 
 #u656-4
 {
-	z-index: 200;
+	z-index: 201;
 	width: 142px;
 	min-height: 26px;
 	background-color: transparent;
@@ -1916,7 +1919,7 @@
 
 #u880
 {
-	z-index: 206;
+	z-index: 207;
 	width: 60px;
 	background-color: transparent;
 	position: relative;
@@ -2863,7 +2866,7 @@
 
 #accordionu833
 {
-	z-index: 307;
+	z-index: 308;
 	border-width: 1px;
 	border-style: solid;
 	border-color: #7F7F7F;
@@ -2874,13 +2877,13 @@
 
 #u834
 {
-	z-index: 308;
+	z-index: 309;
 	background-color: transparent;
 }
 
 #u835-3
 {
-	z-index: 309;
+	z-index: 310;
 	min-height: 52px;
 	border-color: #FFFFFF;
 	padding-left: 10px;
@@ -2943,7 +2946,7 @@
 
 #u836
 {
-	z-index: 312;
+	z-index: 313;
 	border-width: 1px;
 	border-style: solid;
 	border-color: #FFFFFF;
@@ -2959,7 +2962,7 @@
 
 #u956
 {
-	z-index: 349;
+	z-index: 350;
 	width: 49px;
 	background-color: transparent;
 	position: relative;
@@ -2969,7 +2972,7 @@
 
 #u955-4
 {
-	z-index: 345;
+	z-index: 346;
 	width: 495px;
 	min-height: 42px;
 	background-color: transparent;
@@ -2998,7 +3001,7 @@
 
 #u864
 {
-	z-index: 339;
+	z-index: 340;
 	width: 43px;
 	background-color: transparent;
 	position: relative;
@@ -3007,7 +3010,7 @@
 
 #u863-4
 {
-	z-index: 335;
+	z-index: 336;
 	width: 338px;
 	min-height: 38px;
 	background-color: transparent;
@@ -3024,7 +3027,7 @@
 
 #u866-4
 {
-	z-index: 341;
+	z-index: 342;
 	width: 453px;
 	min-height: 22px;
 	background-color: transparent;
@@ -3047,7 +3050,7 @@
 
 #u838
 {
-	z-index: 313;
+	z-index: 314;
 	width: 295px;
 	min-height: 81px;
 	border-style: none;
@@ -3068,7 +3071,7 @@
 
 #u837-4
 {
-	z-index: 315;
+	z-index: 316;
 	width: 210px;
 	min-height: 36px;
 	background-color: transparent;
@@ -3081,7 +3084,7 @@
 
 #u840-4
 {
-	z-index: 319;
+	z-index: 320;
 	width: 210px;
 	min-height: 26px;
 	background-color: transparent;
@@ -3093,7 +3096,7 @@
 
 #u841-4
 {
-	z-index: 323;
+	z-index: 324;
 	width: 210px;
 	min-height: 21px;
 	background-color: transparent;
@@ -3105,7 +3108,7 @@
 
 #u966
 {
-	z-index: 314;
+	z-index: 315;
 	width: 220px;
 	min-height: 172px;
 	border-style: none;
@@ -3126,7 +3129,7 @@
 
 #u857-4
 {
-	z-index: 331;
+	z-index: 332;
 	width: 141px;
 	min-height: 19px;
 	background-color: transparent;
@@ -3138,7 +3141,7 @@
 
 #u855
 {
-	z-index: 329;
+	z-index: 330;
 	width: 150px;
 	min-height: 19px;
 	border-style: none;
@@ -3151,7 +3154,7 @@
 
 #u853
 {
-	z-index: 330;
+	z-index: 331;
 	width: 454px;
 	min-height: 196px;
 	border-style: none;
@@ -3171,7 +3174,7 @@
 
 #u851
 {
-	z-index: 328;
+	z-index: 329;
 	width: 100px;
 	min-height: 30px;
 	border-style: none;
@@ -3183,7 +3186,7 @@
 
 #u849
 {
-	z-index: 327;
+	z-index: 328;
 	width: 130px;
 	min-height: 30px;
 	border-style: none;
@@ -3201,7 +3204,7 @@
 
 #accordionu833-bw
 {
-	z-index: 307;
+	z-index: 308;
 }
 
 body
