--- a/LiveSite/css/index.css
+++ b/LiveSite/css/index.css
@@ -1,7 +1,7 @@
 .version.index /* version checker */
 {
-	color: #0000E8;
-	background-color: #9C6C3F;
+	color: #0000F4;
+	background-color: #1C70DD;
 }
 
 .html
@@ -24,7 +24,7 @@
 
 #page_position_content
 {
-	padding-bottom: 36px;
+	padding-bottom: 130px;
 	width: 0.01px;
 }
 
@@ -66,8 +66,8 @@
 	min-height: 25px;
 	background-color: transparent;
 	color: #FFFFFF;
-	font-size: 31px;
 	line-height: 37px;
+	font-size: 31px;
 	font-family: asap, sans-serif;
 	font-weight: 700;
 	position: fixed;
@@ -81,8 +81,8 @@
 	width: 31px;
 	background-color: transparent;
 	position: fixed;
-	top: 20px;
-	left: 397px;
+	top: 21px;
+	left: 380px;
 }
 
 #u158-4
@@ -92,14 +92,14 @@
 	min-height: 31px;
 	background-color: transparent;
 	color: #FFFFFF;
+	line-height: 28px;
 	text-align: left;
 	font-size: 23px;
-	line-height: 28px;
 	font-family: asap, sans-serif;
 	font-weight: 400;
 	position: fixed;
-	top: 20px;
-	left: 433px;
+	top: 21px;
+	left: 416px;
 }
 
 #u751
@@ -108,25 +108,25 @@
 	width: 31px;
 	background-color: transparent;
 	position: fixed;
-	top: 20px;
-	left: 553px;
+	top: 21px;
+	left: 536px;
 }
 
 #u749-4
 {
 	z-index: 367;
-	width: 131px;
+	width: 161px;
 	min-height: 31px;
 	background-color: transparent;
 	color: #FFFFFF;
+	line-height: 28px;
 	text-align: left;
 	font-size: 23px;
-	line-height: 28px;
 	font-family: asap, sans-serif;
 	font-weight: 400;
 	position: fixed;
-	top: 20px;
-	left: 589px;
+	top: 21px;
+	left: 572px;
 }
 
 #u868
@@ -146,9 +146,9 @@
 	min-height: 31px;
 	background-color: transparent;
 	color: #FFFFFF;
+	line-height: 28px;
 	text-align: left;
 	font-size: 23px;
-	line-height: 28px;
 	font-family: asap, sans-serif;
 	font-weight: 400;
 	position: fixed;
@@ -163,9 +163,9 @@
 	min-height: 27px;
 	background-color: transparent;
 	color: #FFFFFF;
+	line-height: 12px;
 	text-align: left;
 	font-size: 10px;
-	line-height: 12px;
 	font-family: asap, sans-serif;
 	font-weight: 400;
 	position: fixed;
@@ -180,8 +180,8 @@
 	height: 2px;
 	background-color: #FFFFFF;
 	position: fixed;
-	top: 60px;
-	left: 433px;
+	top: 61px;
+	left: 418px;
 }
 
 #u162
@@ -191,8 +191,8 @@
 	height: 2px;
 	background-color: #FFFFFF;
 	position: fixed;
-	top: 60px;
-	left: 607px;
+	top: 58px;
+	left: 613px;
 }
 
 #u163
@@ -202,8 +202,8 @@
 	height: 2px;
 	background-color: #FFFFFF;
 	position: fixed;
-	top: 60px;
-	left: 816px;
+	top: 59px;
+	left: 825px;
 }
 
 #u114
@@ -238,9 +238,9 @@
 	width: 248px;
 	min-height: 41px;
 	background-color: transparent;
+	line-height: 48px;
 	text-align: center;
 	font-size: 40px;
-	line-height: 48px;
 	font-family: asap, sans-serif;
 	font-weight: 700;
 	margin-left: 356px;
@@ -264,9 +264,9 @@
 	width: 351px;
 	min-height: 63px;
 	background-color: transparent;
+	line-height: 24px;
 	text-align: center;
 	font-size: 20px;
-	line-height: 24px;
 	font-family: asap, sans-serif;
 	font-weight: 400;
 	margin-left: 305px;
@@ -312,9 +312,9 @@
 	width: 226px;
 	min-height: 40px;
 	background-color: transparent;
+	line-height: 24px;
 	text-align: center;
 	font-size: 20px;
-	line-height: 24px;
 	font-family: asap, sans-serif;
 	font-weight: 400;
 	position: relative;
@@ -345,7 +345,7 @@
 {
 	width: 0.01px;
 	margin-left: 132px;
-	margin-top: 182px;
+	margin-top: 135px;
 }
 
 #u940
@@ -404,8 +404,8 @@
 	width: 440px;
 	min-height: 32px;
 	background-color: transparent;
-	font-size: 30px;
 	line-height: 36px;
+	font-size: 30px;
 	font-family: asap, sans-serif;
 	font-weight: 700;
 	position: relative;
@@ -479,9 +479,9 @@
 	width: 39px;
 	min-height: 15px;
 	background-color: transparent;
+	line-height: 13px;
 	text-align: right;
 	font-size: 11px;
-	line-height: 13px;
 	font-family: asap, sans-serif;
 	font-weight: 400;
 	position: relative;
@@ -568,9 +568,9 @@
 	width: 164px;
 	min-height: 44px;
 	background-color: transparent;
+	line-height: 20px;
 	text-align: center;
 	font-size: 17px;
-	line-height: 20px;
 	font-family: asap, sans-serif;
 	font-weight: 700;
 	position: relative;
@@ -675,9 +675,9 @@
 	width: 187px;
 	min-height: 23px;
 	background-color: transparent;
+	line-height: 22px;
 	text-align: right;
 	font-size: 18px;
-	line-height: 22px;
 	font-family: asap, sans-serif;
 	font-weight: 700;
 	position: relative;
@@ -701,9 +701,9 @@
 	width: 288px;
 	min-height: 46px;
 	background-color: transparent;
+	line-height: 19px;
 	text-align: center;
 	font-size: 16px;
-	line-height: 19px;
 	font-family: asap, sans-serif;
 	font-weight: 400;
 	margin-top: 38px;
@@ -815,9 +815,9 @@
 	width: 164px;
 	min-height: 44px;
 	background-color: transparent;
+	line-height: 20px;
 	text-align: center;
 	font-size: 17px;
-	line-height: 20px;
 	font-family: asap, sans-serif;
 	font-weight: 700;
 	position: relative;
@@ -1001,9 +1001,9 @@
 	width: 195px;
 	min-height: 23px;
 	background-color: transparent;
+	line-height: 22px;
 	text-align: right;
 	font-size: 18px;
-	line-height: 22px;
 	font-family: asap, sans-serif;
 	font-weight: 700;
 	position: relative;
@@ -1069,9 +1069,9 @@
 	width: 142px;
 	min-height: 26px;
 	background-color: transparent;
+	line-height: 14px;
 	text-align: left;
 	font-size: 12px;
-	line-height: 14px;
 	font-family: asap, sans-serif;
 	font-weight: 400;
 	position: relative;
@@ -1112,7 +1112,7 @@
 #two
 {
 	margin-left: 20px;
-	margin-top: 273px;
+	margin-top: 320px;
 	position: relative;
 }
 
@@ -1120,7 +1120,7 @@
 {
 	width: 0.01px;
 	margin-left: 132px;
-	margin-top: 220px;
+	margin-top: 136px;
 }
 
 #u962
@@ -1174,8 +1174,8 @@
 	width: 613px;
 	min-height: 32px;
 	background-color: transparent;
-	font-size: 30px;
 	line-height: 36px;
+	font-size: 30px;
 	font-family: asap, sans-serif;
 	font-weight: 700;
 	position: relative;
@@ -1194,7 +1194,7 @@
 	background-color: transparent;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 168px;
+	margin-top: 167px;
 	left: 558px;
 }
 
@@ -1277,9 +1277,9 @@
 	width: 39px;
 	min-height: 15px;
 	background-color: transparent;
+	line-height: 13px;
 	text-align: right;
 	font-size: 11px;
-	line-height: 13px;
 	font-family: asap, sans-serif;
 	font-weight: 400;
 	position: relative;
@@ -1335,7 +1335,7 @@
 	height: 2px;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 146px;
+	margin-top: 145px;
 	left: 1px;
 	background: url("../images/u363.png") no-repeat 0px 0px;
 }
@@ -1354,7 +1354,7 @@
 	height: 2px;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 146px;
+	margin-top: 145px;
 	left: 222px;
 	background: url("../images/u436.png") no-repeat 0px 0px;
 }
@@ -1403,7 +1403,7 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 516px;
+	margin-top: 515px;
 	left: 42px;
 }
 
@@ -1411,7 +1411,7 @@
 {
 	width: 205px;
 	min-height: 0px;
-	margin: 516px -10000px 0px 0px;
+	margin: 515px -10000px 0px 0px;
 }
 
 #u647
@@ -1438,9 +1438,9 @@
 	width: 164px;
 	min-height: 44px;
 	background-color: transparent;
+	line-height: 20px;
 	text-align: center;
 	font-size: 17px;
-	line-height: 20px;
 	font-family: asap, sans-serif;
 	font-weight: 700;
 	position: relative;
@@ -1467,7 +1467,7 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 516px;
+	margin-top: 515px;
 	left: 288px;
 }
 
@@ -1475,14 +1475,14 @@
 {
 	width: 205px;
 	min-height: 0px;
-	margin: 516px -10000px 0px 0px;
+	margin: 515px -10000px 0px 0px;
 }
 
 #buttonu651.ButtonSelected
 {
 	width: 205px;
 	min-height: 0px;
-	margin: 516px -10000px 0px 0px;
+	margin: 515px -10000px 0px 0px;
 }
 
 #u653
@@ -1509,9 +1509,9 @@
 	width: 164px;
 	min-height: 44px;
 	background-color: transparent;
+	line-height: 20px;
 	text-align: center;
 	font-size: 17px;
-	line-height: 20px;
 	font-family: asap, sans-serif;
 	font-weight: 700;
 	position: relative;
@@ -1536,7 +1536,7 @@
 	height: 56px;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 516px;
+	margin-top: 515px;
 	left: 41px;
 }
 
@@ -1596,24 +1596,26 @@
 #u509
 {
 	z-index: 165;
-	width: 288px;
-	height: 316px;
+	width: 311px;
+	height: 376px;
 	border-style: none;
 	border-color: transparent;
 	background-color: #FFFFFF;
-	padding-left: 8px;
-	padding-top: 60px;
-	padding-right: 15px;
 	margin-right: -10000px;
 	position: relative;
 	top: 22px;
 	left: 22px;
 }
 
+#u509_position_content
+{
+	padding-top: 60px;
+}
+
 #pu512-4
 {
 	width: 0.01px;
-	margin-left: 33px;
+	margin-left: 41px;
 }
 
 #u512-4
@@ -1622,9 +1624,9 @@
 	width: 193px;
 	min-height: 23px;
 	background-color: transparent;
+	line-height: 22px;
 	text-align: right;
 	font-size: 18px;
-	line-height: 22px;
 	font-family: asap, sans-serif;
 	font-weight: 700;
 	position: relative;
@@ -1648,11 +1650,12 @@
 	width: 288px;
 	min-height: 56px;
 	background-color: transparent;
+	line-height: 19px;
 	text-align: center;
 	font-size: 16px;
-	line-height: 19px;
 	font-family: asap, sans-serif;
 	font-weight: 400;
+	margin-left: 8px;
 	margin-top: 26px;
 	position: relative;
 }
@@ -1660,7 +1663,7 @@
 #pu514
 {
 	width: 0.01px;
-	margin-left: 36px;
+	margin-left: 44px;
 	margin-top: 22px;
 }
 
@@ -1711,7 +1714,7 @@
 	height: 53px;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 516px;
+	margin-top: 515px;
 	left: 288px;
 }
 
@@ -1829,9 +1832,9 @@
 	width: 240px;
 	min-height: 56px;
 	background-color: transparent;
+	line-height: 19px;
 	text-align: center;
 	font-size: 16px;
-	line-height: 19px;
 	font-family: asap, sans-serif;
 	font-weight: 400;
 	position: relative;
@@ -1857,9 +1860,9 @@
 	width: 166px;
 	min-height: 23px;
 	background-color: transparent;
+	line-height: 22px;
 	text-align: right;
 	font-size: 18px;
-	line-height: 22px;
 	font-family: asap, sans-serif;
 	font-weight: 700;
 	position: relative;
@@ -1907,9 +1910,9 @@
 	width: 142px;
 	min-height: 26px;
 	background-color: transparent;
+	line-height: 14px;
 	text-align: left;
 	font-size: 12px;
-	line-height: 14px;
 	font-family: asap, sans-serif;
 	font-weight: 400;
 	position: relative;
@@ -1929,15 +1932,15 @@
 #three
 {
 	margin-left: 21px;
-	margin-top: 215px;
+	margin-top: 299px;
 	position: relative;
 }
 
 #pu887
 {
 	width: 0.01px;
-	margin-left: 129px;
-	margin-top: 193px;
+	margin-left: 131px;
+	margin-top: 132px;
 }
 
 #u887
@@ -1955,8 +1958,8 @@
 	width: 638px;
 	min-height: 32px;
 	background-color: transparent;
-	font-size: 30px;
 	line-height: 36px;
+	font-size: 30px;
 	font-family: asap, sans-serif;
 	font-weight: 700;
 	position: relative;
@@ -1968,8 +1971,8 @@
 #ppu431-4
 {
 	width: 0.01px;
-	margin-left: 129px;
-	margin-top: 48px;
+	margin-left: 131px;
+	margin-top: 15px;
 }
 
 #pu431-4
@@ -2027,7 +2030,7 @@
 	text-align: left;
 	font-family: asap, sans-serif;
 	font-weight: 400;
-	margin-left: 129px;
+	margin-left: 131px;
 	margin-top: 11px;
 	position: relative;
 }
@@ -2035,7 +2038,7 @@
 #pu420
 {
 	width: 0.01px;
-	margin-left: 129px;
+	margin-left: 131px;
 	margin-top: -8px;
 }
 
@@ -2049,7 +2052,7 @@
 	background-color: transparent;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 8px;
+	margin-top: 7px;
 }
 
 #u664-4
@@ -2074,7 +2077,8 @@
 #pu964
 {
 	width: 0.01px;
-	margin-left: 84px;
+	margin-left: 86px;
+	margin-top: -1px;
 }
 
 #u964
@@ -2096,6 +2100,9 @@
 	z-index: 5;
 	width: 795px;
 	background-color: transparent;
+	opacity: 0.9;
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=90)";
+	filter: alpha(opacity=90);
 	position: relative;
 	margin-right: -10000px;
 }
@@ -2117,7 +2124,7 @@
 	background-color: transparent;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 36px;
+	margin-top: 37px;
 	left: 45px;
 }
 
@@ -2131,7 +2138,7 @@
 	background-color: transparent;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 89px;
+	margin-top: 90px;
 	left: 45px;
 }
 
@@ -2145,7 +2152,7 @@
 	background-color: transparent;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 135px;
+	margin-top: 136px;
 	left: 596px;
 }
 
@@ -2160,7 +2167,7 @@
 	font-weight: 400;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 66px;
+	margin-top: 67px;
 	left: 45px;
 }
 
@@ -2175,7 +2182,7 @@
 	font-weight: 400;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 15px;
+	margin-top: 16px;
 	left: 46px;
 }
 
@@ -2190,7 +2197,7 @@
 	border-radius: 100px;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 126px;
+	margin-top: 127px;
 	left: 45px;
 }
 
@@ -2199,7 +2206,7 @@
 	background-color: #CACACA;
 	width: 67px;
 	min-height: 0px;
-	margin: 126px -10000px 0px 0px;
+	margin: 127px -10000px 0px 0px;
 }
 
 #buttonu615.ButtonSelected
@@ -2207,7 +2214,7 @@
 	background-color: #FFFFFF;
 	width: 67px;
 	min-height: 0px;
-	margin: 126px -10000px 0px 0px;
+	margin: 127px -10000px 0px 0px;
 }
 
 #u618-4
@@ -2216,9 +2223,9 @@
 	width: 39px;
 	min-height: 15px;
 	background-color: transparent;
+	line-height: 13px;
 	text-align: right;
 	font-size: 11px;
-	line-height: 13px;
 	font-family: asap, sans-serif;
 	font-weight: 400;
 	position: relative;
@@ -2299,7 +2306,7 @@
 	font-weight: 400;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 81px;
+	margin-top: 82px;
 	left: 667px;
 }
 
@@ -2312,7 +2319,7 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 405px;
+	margin-top: 406px;
 	left: 73px;
 }
 
@@ -2320,7 +2327,7 @@
 {
 	width: 205px;
 	min-height: 0px;
-	margin: 405px -10000px 0px 0px;
+	margin: 406px -10000px 0px 0px;
 }
 
 #u674
@@ -2347,9 +2354,9 @@
 	width: 164px;
 	min-height: 44px;
 	background-color: transparent;
+	line-height: 20px;
 	text-align: center;
 	font-size: 17px;
-	line-height: 20px;
 	font-family: asap, sans-serif;
 	font-weight: 700;
 	position: relative;
@@ -2376,7 +2383,7 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 405px;
+	margin-top: 406px;
 	left: 311px;
 }
 
@@ -2384,14 +2391,14 @@
 {
 	width: 205px;
 	min-height: 0px;
-	margin: 405px -10000px 0px 0px;
+	margin: 406px -10000px 0px 0px;
 }
 
 #buttonu678.ButtonSelected
 {
 	width: 205px;
 	min-height: 0px;
-	margin: 405px -10000px 0px 0px;
+	margin: 406px -10000px 0px 0px;
 }
 
 #u679
@@ -2425,9 +2432,9 @@
 	width: 164px;
 	min-height: 44px;
 	background-color: transparent;
+	line-height: 20px;
 	text-align: center;
 	font-size: 17px;
-	line-height: 20px;
 	font-family: asap, sans-serif;
 	font-weight: 700;
 	position: relative;
@@ -2475,7 +2482,7 @@
 	height: 53px;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 405px;
+	margin-top: 406px;
 	left: 311px;
 }
 
@@ -2634,9 +2641,9 @@
 	width: 166px;
 	min-height: 23px;
 	background-color: transparent;
+	line-height: 22px;
 	text-align: right;
 	font-size: 18px;
-	line-height: 22px;
 	font-family: asap, sans-serif;
 	font-weight: 700;
 	position: relative;
@@ -2671,7 +2678,7 @@
 	height: 56px;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 405px;
+	margin-top: 406px;
 	left: 73px;
 }
 
@@ -2768,9 +2775,9 @@
 	width: 288px;
 	min-height: 56px;
 	background-color: transparent;
+	line-height: 19px;
 	text-align: center;
 	font-size: 16px;
-	line-height: 19px;
 	font-family: asap, sans-serif;
 	font-weight: 400;
 	position: relative;
@@ -2810,9 +2817,9 @@
 	width: 189px;
 	min-height: 23px;
 	background-color: transparent;
+	line-height: 22px;
 	text-align: right;
 	font-size: 18px;
-	line-height: 22px;
 	font-family: asap, sans-serif;
 	font-weight: 700;
 	position: relative;
@@ -2976,8 +2983,8 @@
 	width: 495px;
 	min-height: 42px;
 	background-color: transparent;
-	font-size: 28px;
 	line-height: 34px;
+	font-size: 28px;
 	font-family: asap, sans-serif;
 	font-weight: 700;
 	position: relative;
@@ -3014,9 +3021,9 @@
 	width: 338px;
 	min-height: 38px;
 	background-color: transparent;
+	line-height: 34px;
 	text-align: left;
 	font-size: 28px;
-	line-height: 34px;
 	font-family: asap, sans-serif;
 	font-weight: 700;
 	position: relative;
@@ -3031,9 +3038,9 @@
 	width: 453px;
 	min-height: 22px;
 	background-color: transparent;
+	line-height: 18px;
 	text-align: center;
 	font-size: 15px;
-	line-height: 18px;
 	font-family: asap, sans-serif;
 	font-weight: 400;
 	margin-top: 5px;
@@ -3075,8 +3082,8 @@
 	width: 210px;
 	min-height: 36px;
 	background-color: transparent;
-	font-size: 18px;
 	line-height: 22px;
+	font-size: 18px;
 	font-family: asap, sans-serif;
 	font-weight: 700;
 	position: relative;
